<resources>
    <string name="app_name">NewDigiDiary</string>
    <string name="home_item">home</string>
    <string name="favourites_item">favourites</string>
    <string name="calendar_item">calendar</string>
    <string name="settings_item">settings</string>
    <string name="compose_diary">compose</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="digi_diary">Digi-Diary</string>
    <string name="save">Save</string>
    <string name="edit_diary">Edit Diary</string>
    <string name="add_new_diary">Add New Diary</string>
    <string name="dummy_date">Friday, August 301th, 2020</string>
    <string name="today_is">Today is</string>
    <string name="hint_write_your_diary_here">Write your diary here</string>
    <string name="hint_awesome">awesome</string>
    <string name="add_new_diary_dots">Add New Diary ...</string>
    <string name="edit">Edit</string>
    <string name="tv_diary_desc">dummy text dummy text dummy text dummy text dummy text dummy text dummy text dummy text </string>
    <string name="bin">Bin</string>
    <string name="restore">restore</string>
    <string name="delete">delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_soft_delete">Are you sure you want to delete this diary? It will be moved to the bin upon your confirmation</string>
    <string name="confirm_restore">Are you sure you restore the selected items?</string>
    <string name="confirm_permanent_delete">Are you sure you want to delete the selected diaries? If you choose yes, you will loose them forever.</string>
    <string name="alert">Alert!!</string>
    <string name="languages">Languages</string>
    <string name="tell_others_about_digi_diary">Tell others about Digi-Diary</string>
    <string name="about">About Digi-Diary</string>

    <string-array name="languages_array">
        <item>English</item>
        <item>Arabic</item>
        <item>German</item>
        <item>French</item>
        <item>Spanish</item>
        <item>Af soomaali</item>
        <item>Urdu</item>
    </string-array>
</resources>
