<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mini_diary_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/colorNeonCarrot"
    android:padding="10dp">


    <TextView
        android:id="@+id/tv_today_is"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/today_is"
        app:layout_constraintStart_toEndOf="@id/iv_selection_mark"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/today_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/hint_awesome"
        app:layout_constraintStart_toEndOf="@id/tv_today_is"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/today_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_today_is"
        app:layout_constraintTop_toBottomOf="@id/tv_today_is"
        tools:text="@string/tv_diary_desc" />

    <ImageView
        android:id="@+id/iv_selection_mark"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="2dp"
        android:visibility="gone"
        android:src="@drawable/selection_mark_selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>