<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".destinations.SettingsFragment">

    <LinearLayout
        android:id="@+id/block1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navigation_rounded_corners"
        android:backgroundTint="@color/colorNeonCarrot"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/row_bin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="2dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_trash" />

            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:textAlignment="viewStart"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:enabled="true"
                android:text="@string/bin"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row_languages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="2dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_translate" />

            <Button
                android:id="@+id/btn_languages"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:textAlignment="viewStart"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:enabled="true"
                android:text="@string/languages"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="2dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_conversation" />

            <Button
                android:id="@+id/btn_share"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:enabled="true"
                android:text="@string/tell_others_about_digi_diary"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="2dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_star" />

            <Button
                android:id="@+id/btn_rate"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:enabled="true"
                android:text="Rate Digi-Diary"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/row_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="2dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_info2" />

            <Button
                android:id="@+id/btn_about_digi-diary"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:enabled="true"
                android:text="@string/about"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </TableRow>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>