<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="280dp"
    android:layout_marginBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/esse" />

    <View
        android:id="@+id/bottom_image_bar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_image"
        app:layout_constraintStart_toStartOf="@id/iv_image"
        app:layout_constraintEnd_toEndOf="@id/iv_image"
        android:background="@color/lightGrey"
        android:alpha="0.7"/>

    <TextView
        android:id="@+id/tv_today_is"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/today_is"
        app:layout_constraintStart_toStartOf="@id/bottom_image_bar"
        app:layout_constraintTop_toTopOf="@id/bottom_image_bar"/>

    <TextView
        android:id="@+id/today_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/hint_awesome"
        app:layout_constraintStart_toEndOf="@id/tv_today_is"
        app:layout_constraintTop_toTopOf="@id/bottom_image_bar"/>

    <TextView
        android:id="@+id/today_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/tv_diary_desc"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_today_is"/>

    <View
        android:id="@+id/top_image_bar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="@id/iv_image"
        app:layout_constraintStart_toStartOf="@id/iv_image"
        app:layout_constraintEnd_toEndOf="@id/iv_image"
        android:background="@color/lightGrey"
        android:alpha="0.7"/>

    <ImageView
        android:id="@+id/cal_icon"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/small_margin"
        android:src="@drawable/ic_diary_svg"
        app:layout_constraintTop_toTopOf="@id/top_image_bar"
        app:layout_constraintBottom_toBottomOf="@id/top_image_bar"
        app:layout_constraintStart_toStartOf="@id/top_image_bar"/>

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/top_image_bar"
        app:layout_constraintBottom_toBottomOf="@id/top_image_bar"
        app:layout_constraintStart_toEndOf="@id/cal_icon"
        tools:text="30"
        android:gravity="center_vertical"
        android:textSize="30dp"
        android:textColor="@color/colorText"
        android:layout_marginStart="@dimen/small_margin"/>

    <TextView
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/top_image_bar"
        app:layout_constraintStart_toEndOf="@id/day"
        tools:text="August"
        android:gravity="center_vertical"
        android:textSize="18dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/colorText"
        android:layout_marginStart="@dimen/small_margin"/>

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/month"
        app:layout_constraintStart_toEndOf="@id/day"
        tools:text="2020"
        android:gravity="center_vertical"
        android:textSize="18dp"
        android:textColor="@color/colorText"
        android:layout_marginStart="@dimen/small_margin"/>

    <ImageView
        android:id="@+id/iv_favourite"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="@id/top_image_bar"
        app:layout_constraintBottom_toBottomOf="@id/top_image_bar"
        app:layout_constraintEnd_toStartOf="@id/go_to_details"
        android:layout_marginEnd="10dp"
        android:padding="5dp"
        tools:src="@drawable/ic_filled_heart"
        android:clickable="true"/>

    <ImageView
        android:id="@+id/go_to_details"
        android:layout_width="40dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/top_image_bar"
        app:layout_constraintBottom_toBottomOf="@id/top_image_bar"
        app:layout_constraintEnd_toEndOf="@id/top_image_bar"
        android:layout_marginEnd="10dp"
        android:padding="5dp"
        android:src="@drawable/ic_right_arrow"/>
</androidx.constraintlayout.widget.ConstraintLayout>